Compiler/tests/typing/bad/testfile-undef_var-3.rs

fn f(x: i32) { }
fn main() { x; }
